[gd_scene load_steps=3 format=3 uid="uid://wa2gvb8fbk2n"]

[ext_resource type="Theme" uid="uid://de3namw7hkal8" path="res://resources/themes/ui.tres" id="1_0fbet"]
[ext_resource type="Script" uid="uid://ku1kbu757pw5" path="res://control.gd" id="2_62e2m"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0fbet")
script = ExtResource("2_62e2m")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Hunt the SNARF
"
scroll_following = true

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ActionButtonsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="MoveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer"]
layout_mode = 2
text = "Move"

[node name="ShootButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer"]
layout_mode = 2
text = "Shoot"

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer"]
layout_mode = 2
text = "Restart"

[node name="ConfirmShootButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer"]
layout_mode = 2
text = "Confirm"

[node name="GoBackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer"]
layout_mode = 2
text = "Back"

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="SelectedRoomButtonsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="ArrowsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer/HBoxContainer"]
layout_mode = 2
text = "Bolts:"

[node name="ArrowsCount" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"

[node name="ContextButtonsContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 10

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer/ShootButton" to="." method="_on_shoot_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer/ConfirmShootButton" to="." method="_on_confirm_shoot_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Panel/MarginContainer/VBoxContainer/ActionButtonsContainer/GoBackButton" to="." method="_on_go_back_button_pressed"]
